# pdf-scrub

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  Justfile  README.md
.github/workflows/: ci.yml
src/: anonymize.rs  lib.rs  main.rs  ollama.rs  pages.rs  secrets.rs  writer.rs
